- Fixed: Theo file excel

--- a/frontend/web/templates_2/css/style.css
+++ b/frontend/web/templates_2/css/style.css
@@ -1,6 +1,7 @@
 body {
     background: #000;
-    font-family: Times, "Times New Roman", serif;
+    font-family: Arial, "Times New Roman", sans-serif;
+    /*font-family: Roboto, sans-serif;*/
 }
 
 .container {
